# nlp-lab-text-embedding

./: .gitignore  Embeddings.ipynb  main.py  pyproject.toml  requirements.txt
