[project]
name = "nlp-lab-text-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel==6.29.5",
    "matplotlib==3.10.0",
    "numpy==2.2.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "seaborn==0.13.2",
]
